# claude-codeatlas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  sonar-project.properties
.claude-plugin/: plugin.json
commands/: explore-codebase.md
docs/: overview.md  reference.md  usage.md
hooks/: bootstrap.sh  hooks.json
src/codeatlas/: __init__.py
src/codeatlas/explore_codebase/: __init__.py  _paths.py  analyze.py  changeset.py  cleanup.py  cli.py  db.py  queries.py  render.py  topics.py
tests/: conftest.py
tests/unit/: test_analyze.py  test_changeset.py  test_cli_scaffold.py  test_cmd_callees.py  test_cmd_callers.py  test_cmd_cleanup.py  test_cmd_find.py  test_cmd_impact.py  test_cmd_init.py  test_cmd_narrative.py  test_cmd_refresh.py  test_cmd_render.py  test_cmd_summary.py  test_db.py  test_paths.py  test_queries.py  test_topics.py
